Fixes typo